# PFD_TIC_Parallel_robot_Catota_Jonathan

./: README.md
dev_ws/src/my_messages/: CMakeLists.txt  package.xml
dev_ws/src/my_messages/msg/: Mensajes.msg
dev_ws/src/parallel_robot/: CMakeLists.txt  package.xml
dev_ws/src/parallel_robot/config/: parallel_control.yaml
dev_ws/src/parallel_robot/control/: control_effort.cpp  control_posicion.cpp  control_posicion2.py
dev_ws/src/parallel_robot/launch/: robot_paralelo.launch.py  robot_paralelo_rviz.launch.py
dev_ws/src/parallel_robot/meshes/: Cruzeta.dae  Plataforma_fija.dae  Plataforma_movil.dae  Plataforma_movil2.dae  Plataforma_movil3.dae  Union4.dae  Vastago.dae  Vastago4.dae  act_cent_acop_univ.dae
dev_ws/src/parallel_robot/results/: Fuerzas.txt  Posiciones.txt  referencias.txt  time.txt  trayec.txt  try_cir.txt  try_rombo.txt  try_triangulo.txt
dev_ws/src/parallel_robot/rviz/: rviz_config_file.rviz
dev_ws/src/parallel_robot/scripts/: posicion.py
dev_ws/src/parallel_robot/src/: control_pid.cpp  global_parameter_server.cpp  graphics_pid.py  publicador.cpp  suscriptor.cpp  traject_circular.cpp  traject_rombo.cpp  traject_triangulo.cpp
dev_ws/src/parallel_robot/urdf/: parallel_control.xacro  parallel_leg.xacro  parallel_robot.xacro
